--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
-.welcome {
-  margin-top: 40px;
+:root {
+  --first-color: #7b9477;
+  --second-color: #d8aa63;
+  --third-color: #3f5f76;
+  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .solomiia-photo {
