positioned main photo

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 60px;
 }
 
 h2 {
@@ -28,8 +28,8 @@ h3 {
 }
 
 .intro-text {
-  padding-top: 70px;
-  padding-left: 90px;
+  padding-top: 90px;
+  padding-left: 20px;
 }
 
 .contact-me-button {
@@ -37,11 +37,10 @@ h3 {
 
 .solomiia-photo {
   display: flex;
-  max-width: 295px;
-  position: relative;
-  margin-left: 60%;
-  margin-top: -180px;
+  max-width: 300px;
+  padding-top: 20px;
   padding-bottom: 20px;
+  margin-left: 50px;
 }
 
 .main-part {
