--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,17 @@ h3 {
 }
 
 .contact-me-button {
+  padding: 15px;
+  margin-top: 15px;
+  background-color: var(--second-color);
+  border: 1px solid var(--second-color);
+  border-radius: 2px;
+  box-shadow: var(--box-shadow);
+}
+
+.my-mail {
+  color: var(--third-color);
+  text-decoration: none;
 }
 
 .solomiia-photo {
