--- a/src/styles.css
+++ b/src/styles.css
@@ -103,7 +103,6 @@ h3 {
 }
 
 /* ================ The Timeline ================ */
-
 .timeline {
   position: relative;
   width: 660px;
@@ -204,7 +203,7 @@ h3 {
 .flag {
   position: relative;
   display: inline;
-  background: rgb(248, 248, 248);
+  background: var(--second-color);
   padding: 6px 10px;
   border-radius: 5px;
 
@@ -230,20 +229,20 @@ h3 {
 .direction-r .flag:before {
   position: absolute;
   top: 50%;
-  right: -40px;
+  right: -36px;
   content: " ";
   display: block;
   width: 12px;
   height: 12px;
   margin-top: -10px;
-  background: #fff;
+  background: var(--second-color);
   border-radius: 10px;
-  border: 4px solid rgb(255, 80, 80);
+  border: 4px solid var(--second-color);
   z-index: 10;
 }
 
 .direction-r .flag:before {
-  left: -40px;
+  left: -36px;
 }
 
 .direction-l .flag:after {
@@ -279,7 +278,7 @@ h3 {
 
   line-height: 1em;
   font-size: 0.66666em;
-  color: rgb(250, 80, 80);
+  color: var(--third-color);
   vertical-align: middle;
 }
 
@@ -334,7 +333,7 @@ h3 {
   }
 
   .flag {
-    background: rgb(255, 255, 255);
+    background: var(--second-color));
     z-index: 15;
   }
 
@@ -342,15 +341,15 @@ h3 {
   .direction-r .flag:before {
     position: absolute;
     top: -30px;
-    left: 50%;
+    left: 53%;
     content: " ";
     display: block;
     width: 12px;
     height: 12px;
     margin-left: -9px;
-    background: #fff;
+    background: var(--second-color);
     border-radius: 10px;
-    border: 4px solid rgb(255, 80, 80);
+    border: 4px solid var(--second-color);
     z-index: 10;
   }
 
@@ -364,7 +363,7 @@ h3 {
     width: 0;
     margin-left: -8px;
     border: solid transparent;
-    border-bottom-color: rgb(255, 255, 255);
+    border-bottom-color: var(--second-color);
     border-width: 8px;
     pointer-events: none;
   }
@@ -388,11 +387,11 @@ h3 {
     position: relative;
     margin: 1em 0 0 0;
     padding: 1em;
-    background: rgb(245, 245, 245);
+    background: rgb(245,245,245);
+    color: var(--third-color);
     -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
-
     z-index: 15;
   }
 
